syntax = "proto3";

package auth;

service AuthService {
  rpc LoginByGoogle (LoginGoogleDto) returns (AuthCredentials) {}
}

message LoginGoogleDto {
  string idToken = 1;
}

message Token {
  string name = 1;
  string value = 2;
}

message AuthCredentials {
  repeated Token tokens = 1;
}